# L-vault

./: .gitignore  README.md  SETUP_WINDOWS.md  configure_photos_whatsapp.ps1  create_desktop_shortcut.ps1  free_onedrive_space.ps1  install.ps1  pyproject.toml  requirements.txt  run_viewer.ps1  start_viewer_hidden.ps1
config/: config.example.yaml
src/localvault/: auto_takeout.py  auto_whatsapp.py  cli.py  config.py  control_panel.py  db.py  dedupe.py  email_names.py  extract.py  gmail_api.py  gmail_audit.py  gmail_maintenance.py  gmail_takeout.py  health.py  migrations.py  photos.py  reports.py  scheduler.py  source_cleanup.py  source_sync.py  utils.py  vault_index.py  verify.py  viewer.py  whatsapp.py
src/localvault/static/: styles.css
src/localvault/templates/: base.html  control.html  dashboard.html  fotos.html  gmail.html  gmail_message.html  photos.html  reports.html  whatsapp.html  whatsapp_chat.html
tests/: test_auto_takeout.py  test_auto_whatsapp.py  test_cli_exit_codes.py  test_config.py  test_control_panel.py  test_email_names.py  test_extract.py  test_gmail_api_incremental.py  test_gmail_audit.py  test_gmail_maintenance.py  test_gmail_takeout.py  test_health.py  test_photo_migration.py  test_photos_local_sources.py  test_photos_takeout.py  test_scheduler.py  test_source_cleanup.py  test_source_sync.py  test_vault_index.py  test_viewer_file_route.py  test_whatsapp.py
