[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localvault-backup-manager"
version = "0.2.0"
description = "Local-first backup manager and viewer for Gmail and Google Takeout Photos."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0",
  "Pillow>=10.4",
  "google-api-python-client>=2.140",
  "google-auth>=2.33",
  "google-auth-oauthlib>=1.2"
]

[project.optional-dependencies]
test = ["pytest>=8.2", "httpx>=0.27"]

[project.scripts]
localvault = "localvault.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
localvault = ["templates/*.html", "static/*.css"]
